fix: Adjust timeline styles for better alignment and spacing, including icon positioning and content margins

--- a/components/Timeline/Timeline.module.scss
+++ b/components/Timeline/Timeline.module.scss
@@ -19,7 +19,7 @@
     content: '';
     position: absolute;
     top: 0;
-    left: 50%;
+    left: 0;
     transform: translateX(-50%);
     height: 100%;
     width: 3px;
@@ -36,7 +36,7 @@
     aspect-ratio: 1/1;
     position: absolute;
     top: 0;
-    left: 50%;
+    left: 0;
     rotate: 45deg;
     transform: translateX(-50%) translateY(20%);
     background-color: var.$timeline-primary;
@@ -47,7 +47,7 @@
     justify-content: center;
     color: #fff;
 }
-.mainTimeline .timelineItem .timelineIcon i {
+.mainTimeline .timelineItem .timelineIcon svg {
     font-size: 16px;
     rotate: -45deg;
 }
@@ -55,16 +55,13 @@
 .mainTimeline .timelineItem .timelineContent {
     width: 47%;
     position: relative;
+    margin-left: 30px;
 }
 
 .mainTimeline .timelineItem .timelineContent img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.mainTimeline .timelineItem:nth-child(even) .timelineContent {
-    float: right;
 }
 
 .mainTimeline .timelineItem::after,
